tests/tmytests/bad/method_collision_3.lat
class Ok {
    int a;
    int b;
    
    int dummy() {
        return 42;
    }

    void doBadStuff(int x) {
        printInt(x);
    }
}


class BadKiddo extends Ok {
    int c;
    int d;
    
    int dummy() {
        return 42;
    }

    void doBadStuff(int x, int y) {
        printInt(x);
        printInt(y);
    }
}

int main() {
    return 0;
}